<resources>
    <string name="app_name">MyClass-SE-01-A</string>
    <string name="no">Nomor</string>
    <string name="nama">Nama</string>
    <string name="ttl">Tanggal Lahir</string>
    <string name="sex">Jenis Kelamin</string>
    <string name="address">Alamat</string>
    <string name="save">Simpan</string>
    <string name="update">Update</string>
    <string name="informasi">Aplikasi ini berisi daftar Kru Bajak Laut topi jerami. Digunakan untuk pendataan kru. Fitur yang dimiliki dapat menambah, update, dan hapus data kru topi jerami</string>
    <string name="owner">Created By : Afan D Nat</string>
    <string name="version">Version : 1.1</string>
    <string name="email">Email : afandi.nat@gmail.com</string>
    <string name="input_data">Input Data</string>
    <string name="l_atau_p">L atau P</string>
    <string name="_1990_04_11">1990-04-11</string>
</resources>
