<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFFAF0"
    android:padding="40dp"
    tools:context=".InputDataActivity">

    <Button
        android:id="@+id/button1"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/editText5"
        android:layout_alignParentBottom="true"
        android:drawableStart="@drawable/ic_save"
        android:text="@string/save"
        android:textColor="@color/colorAccent"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView1"
        android:layout_alignStart="@id/textView1"
        android:drawableStart="@drawable/ic_create"
        android:inputType="number"
        android:maxLength="10">

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_alignStart="@+id/textView2"
        android:drawableStart="@drawable/ic_group"
        android:inputType="text"
        android:maxLength="20" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_alignStart="@+id/textView3"
        android:drawableStart="@drawable/ic_date_range"
        android:hint="@string/_1990_04_11"
        android:inputType="date" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView4"
        android:layout_alignStart="@+id/textView4"
        android:drawableStart="@drawable/ic_person"
        android:hint="@string/l_atau_p"
        android:inputType="text"
        android:maxLength="1" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView5"
        android:layout_alignStart="@+id/textView5"
        android:drawableStart="@drawable/ic_place"
        android:inputType="text"
        android:maxLength="100" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/no" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText1"
        android:layout_alignStart="@+id/editText1"
        android:layout_marginTop="10dp"
        android:text="@string/nama" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText2"
        android:layout_alignStart="@+id/editText2"
        android:layout_marginTop="10dp"
        android:text="@string/ttl" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText3"
        android:layout_alignStart="@+id/editText3"
        android:layout_marginTop="10dp"
        android:text="@string/sex" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText4"
        android:layout_alignStart="@+id/editText4"
        android:layout_marginTop="10dp"
        android:text="@string/address" />

</RelativeLayout>